# This file is placed in the Public Domain.


[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "nixt"
version = "80"
authors = [
    {name = "Bart Thate", email = "record11719@gmail.com" },
]
description = "You have been nixt."
readme = "README.rst"
license = { text="Public Domain"}
classifiers=[
    'Development Status :: 4 - Beta',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/nixt"
"bugs" = "https://github.com/otpcr/nixt/issues"
"source" = "https://github.com/otpcr/nixt"


[project.scripts]
"nixt"  = "nixt.cli:main"
"nixtc" = "nixt.console:wrapped"
"nixtd" = "nixt.daemon:main"
"nixts" = "nixt.service:main"


[tool.setuptools]
packages = [
   'nixt',
]
