# This file is placed in the Public Domain.


[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "nixt"
version = "140"
authors = [
    {name = "Bart Thate", email = "bthate@dds.nl" },
]
description = "NIXT"
readme = "README.rst"
license = { text="Public Domain"}
classifiers=[
    'Development Status :: 4 - Beta',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/nixt"
"bugs" = "https://github.com/otpcr/nixt/issues"
"source" = "https://github.com/otpcr/nixt"


[project.scripts]
'nixt'  = 'nixt.control:wrapped'
'nixtc' = "nixt.console:wrapped'
'nixtd' = 'nixt.daemon:main'
'nixts' = 'nixt.service:wrapped'



[tool.setuptools]
packages = [
    'nixt',
    'nixt.modules'
]
